# tauri-plugin-medialibrary-example

./: LICENSE  README.md  package.json
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.android.json  default.json  default.windows.json
src-tauri/src/: lib.rs  main.rs
src/components/: ErrorHandler.vue  MedialibrayBrowserComponent.vue  Thumbnail.vue  media_library_browser.ts
